update listing and detail  ui toolbar and  style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
 
     <string name="wonder_db_name">wonder-place-database</string>
+    <string name="label_wonder">Wonders</string>
 </resources>
